<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/bookingsFragment"
        android:icon="@drawable/ic_nav_bookings"
        android:title="@string/nav_bookings" />
    <item
        android:id="@+id/walletFragment"
        android:icon="@drawable/ic_nav_wallet"
        android:title="@string/nav_wallet" />
    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_nav_chat"
        android:title="@string/nav_chat" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
